fix: fixed full-bleed, added featured image

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -2,7 +2,7 @@
   {% include 'styles/footer.css' %}
 </style>
 
-<footer class="full-bleed">
+<footer>
   <div class="container">
     <span>I am a footer</span>
   </div>
