--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,7 +2,7 @@
   {% include 'styles/header.css' %}
 </style>
 
-<header class="full-bleed">
+<header>
   <div class="container">
     {% if nav.length %}
       <nav>
