feat: added Alpine.js

--- a/src/_includes/styles/author.css
+++ b/src/_includes/styles/author.css
@@ -21,6 +21,7 @@
     top: var(--space-xl);
     max-width: var(--author-width);
     text-align: center;
+    z-index: -1;
   }
 
   .author picture {
