--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -21,8 +21,7 @@
 <link rel="webmention" href="https://webmention.io/{{ pkg.homepage | hostname }}/webmention" />
 <link rel="pingback" href="https://webmention.io/{{ pkg.homepage | hostname }}/xmlrpc" />
 
-<link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/reseter.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reseter.css">
+{% include 'js/reseter.njk' %}
 
 <style>
   {% include 'styles/typography.css' %}
