--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -3,18 +3,21 @@
   font-weight: 300;
   font-variation-settings: 'wght' 300;
   src: url('/fonts/MerriweatherSans-VariableFont_wght.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Merriweather';
   font-weight: 400;
   src: url('/fonts/Merriweather-Regular.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Merriweather';
   font-weight: 700;
   src: url('/fonts/Merriweather-Bold.ttf');
+  font-display: swap;
 }
 
 :root {
