feat: added backdrop, added read-on container

--- a/src/_includes/author.njk
+++ b/src/_includes/author.njk
@@ -5,6 +5,6 @@
 </style>
 
 <aside class="author">
-  {% gravatar author.email, author.name %}
+  {% gravatar author.email, author.name, '64px' %}
   <small>{{ pkg.description }}</small>
 </aside>
