--- a/src/_includes/styles/attachments.css
+++ b/src/_includes/styles/attachments.css
@@ -14,6 +14,8 @@
 }
 
 .attachments button {
+  flex: 0 0 calc(50% - var(--space-l) * 0.5);
+  display: inline-flex;
   border-radius: var(--border-radius-m);
   border: none;
   padding: 0;
@@ -22,8 +24,27 @@
   cursor: pointer;
 }
 
+.attachments [data-hidden-items]::after {
+  content: attr(data-hidden-items);
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--color-bg-muted);
+  color: var(--color-text-muted);
+  font-size: var(--font-size-h1);
+  font-family: var(--font-serif);
+  font-weight: 700;
+  opacity: 0.95;
+}
+
 .attachments figure {
-  flex: 0 0 calc(50% - var(--space-l) * 0.5);
   display: flex;
 }
 
