--- a/src/_includes/styles/default.css
+++ b/src/_includes/styles/default.css
@@ -21,7 +21,7 @@ body {
   align-items: flex-start;
   align-self: stretch;
   justify-content: flex-end;
-  flex-direction: column-reverse;
+  flex-direction: column;
   gap: var(--space-xxl);
   width: 100%;
   max-width: var(--content-width);
