--- a/src/_includes/styles/post.css
+++ b/src/_includes/styles/post.css
@@ -33,8 +33,66 @@
   object-position: center;
 }
 
+.read-on {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space-xl);
+  border-top: var(--border-width) solid var(--color-bg-muted);
+  margin-top: var(--space-xxl);
+  padding-top: var(--space-xxl);
+}
+
+.read-on [data-no-entry] {
+  display: none;
+}
+
+.read-on > [data-previous],
+.read-on > [data-next] {
+  margin-top: 0;
+}
+
+.read-on .preview {
+  width: 100%;
+  z-index: -1;
+}
+
+#read-on {
+  flex: 1 0 100%;
+  font-family: var(--font-serif);
+  font-size: var(--font-size-h4);
+  font-weight: 700;
+}
+
 @media screen and (min-width: 960px) {
+  [data-no-entry] > h2 {
+    color: var(--color-text-muted);
+    font-size: var(--font-size-h3);
+  }
+
   .post {
     flex-direction: row;
+  }
+
+  .read-on {
+    border-top: none;
+    padding: 0;
+  }
+
+  .read-on [data-no-entry] {
+    display: flex;
+  }
+
+  .read-on section[data-no-entry] {
+    border-style: dashed;
+  }
+
+  .read-on [data-no-entry]:hover,
+  .read-on [data-no-entry]:focus-within {
+    background-color: inherit;
+  }
+
+  .read-on > [data-previous],
+  .read-on > [data-next] {
+    flex: 0 0 calc(50% - var(--space-xl) * 0.5);
   }
 }
