fix: fixed typo

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -124,7 +124,7 @@ layout: default.njk
         <p>
           Das hier war der neueste Beitrag.
         </p>
-        <a href="/ | absoluteUrl" data-back>Zurück zur Startseite.</a>
+        <a href="{{ '/' | absoluteUrl }}" data-back>Zurück zur Startseite.</a>
       </section>
     {% endif %}
       </div>
@@ -138,7 +138,7 @@ layout: default.njk
         <p>
           Keine weiteren Beiträge vorhanden.
         </p>
-        <a href="/ | absoluteUrl" data-back>Zurück zur Startseite.</a>
+        <a href="{{ '/' | absoluteUrl }}" data-back>Zurück zur Startseite.</a>
       </section>
     {% endif %}
       </div>
