--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -8,20 +8,24 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="canonical" href="{{ page.url | absoluteUrl }}" />
+<link rel="canonical" href="{{ page.url | absoluteUrl(env.DEPLOY_PRIME_URL or env.URL or pkg.homepage) }}" />
 <meta name="author" content="{{ pkg.author.name }}" />
 <meta name="description" content="{{ tldr or manifest.description }}" />
 <meta name="generator" content="{{ eleventy.generator }}" />
 {% if pkg.private %}<meta name="robots" content="noindex, nofollow" />{% endif %}
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="icon" type="image/png" href="/img/favicon-32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="/img/favicon-16.png" sizes="16x16" />
-<link rel="icon" href="/favicon.ico" sizes="32x32" />
 <link rel="apple-touch-icon" href="/img/apple-touch-192.png">
 <link rel="alternate" type="application/atom+xml" title="{{ manifest.name }}" href="{{ '/feed.xml' | absoluteUrl }}" />
 <link rel="webmention" href="https://webmention.io/{{ pkg.homepage | hostname }}/webmention" />
 <link rel="pingback" href="https://webmention.io/{{ pkg.homepage | hostname }}/xmlrpc" />
 
-{% include 'js/reseter.njk' %}
+{% include 'seo.njk' %}
+
+{% if not amp %}
+  {% include 'js/reseter.njk' %}
+{% endif %}
 
 <style>
   {% include 'styles/typography.css' %}
