feat: added PWA compatibility

--- a/src/404.njk
+++ b/src/404.njk
@@ -1,7 +1,9 @@
 ---
-title: Error
+title: Seite nicht gefunden
 permalink: /404.html
 eleventyExcludeFromCollections: true
 ---
 
-<p>Ugh... that's an error</p>
+<p>Hier geht es leider nicht mehr weiter.</p>
+
+<a href="/" data-back>Zurück zur Startseite</a>
