fix: fixed JavaScript minification

--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -20,5 +20,9 @@ layout: base.njk
 {% include 'footer.njk' %}
 
 <script>
-  {% include 'js/service-worker.js' %}
+  {% set service_worker %}
+    {% include 'js/service-worker.js' %}
+  {% endset %}
+
+  {{ service_worker | jsmin | safe }}
 </script>
