fix: fixed service worker

--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -21,6 +21,8 @@ layout: base.njk
 
 <script>
   {% set service_worker %}
+    {# {% include 'js/render-banner.js' %} #}
+    {# {% include 'js/render-loader.js' %} #}
     {% include 'js/service-worker.js' %}
   {% endset %}
 
