feat: added stories page

--- a/src/_collections/post/story/index.njk
+++ b/src/_collections/post/story/index.njk
@@ -3,7 +3,7 @@ layout: base.njk
 
 pagination:
   alias: post
-  data: collections.posts
+  data: collections.stories
   size: 1
   reverse: true
 ---
