--- a/src/_collections/stories/index.njk
+++ b/src/_collections/stories/index.njk
@@ -14,6 +14,7 @@ pagination:
 
   <div class="stories">
     {% asyncEach story in pagination.items %}
+
       {% set featured_image = story.attachments | first %}
 
       {% set loading = 'eager' if loop.index0 < 4 else 'lazy' %}
@@ -28,12 +29,45 @@ pagination:
         %}
       {% endsetAsync %}
 
-      <a href="{{ '/post' + story.permalink | absoluteUrl }}">
-        {{ poster | safe }}
-      </a>
+
+      {% if loop.index0 %} {# Targets each post apart the first one, since no previous post is available #}
+        {% set previousPost = pagination.items[loop.index0 - 1] %}
+
+        {% set previous = previousPost.date | parseDate | dateObj %}
+        {% set current = story.date | parseDate | dateObj %}
+
+        {% if previous.month != current.month or previous.year != current.year %}
+          <time class="separator" datetime="{{ story.date | dateStringFormatted('YYYY-MM') }}" role="separator">{{ story.date | dateStringFormatted("MMMM YYYY") }}</time>
+        {% endif %}
+      {% endif %}
+
+      {% set permalink = '/post' + story.permalink + '/story.html' | absoluteUrl %}
+
+      <article 
+        x-data="story('{{ permalink }}')"
+        aria-label="{{ story.title.rendered }} Story"
+        data-story
+      >
+        <a
+          href="{{ permalink }}"
+          title="{{ story.title.rendered}} Story ansehen"
+          @click="openBackdrop"
+          data-theme="dark"
+          data-story-link
+        >
+          {{ poster | safe }}
+
+          <span aria-hidden="true">
+            {% feather 'image', { 'aria-hidden': true } %}
+            <span>{{ story.attachments.length }}</span>
+          </span>
+        </a>
+
+        {% include 'backdrop.njk' %}
+      </article>
 
     {% endeach %}
-  </stories>
+  </div>
 
 {% else %}
 
