--- a/src/_includes/styles/backdrop.css
+++ b/src/_includes/styles/backdrop.css
@@ -8,21 +8,12 @@
   }
 }
 
-@keyframes grow {
-  from {
-    transform: scale(0);
-  }
-
-  to {
-    transform: scale(1);
-  }
-}
-
 .backdrop {
   animation: appear var(--animation-duration)
     cubic-bezier(0.075, 0.82, 0.165, 1);
   position: fixed;
   display: flex;
+  justify-content: center;
   top: 0;
   right: 0;
   bottom: 0;
@@ -32,41 +23,17 @@
   background-color: var(--color-dark);
   color: var(--color-text-muted);
   overflow: hidden;
+  z-index: 9999;
 }
 
-.backdrop figure {
-  flex: 1 0 100%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: var(--space-xxl);
-  width: 100vw;
-  max-width: 100%;
-  height: 100%;
-  max-height: 75vh;
-  scroll-snap-align: center;
-}
-
-.backdrop picture {
-  justify-content: center;
-  width: auto;
-  max-width: 75%;
-}
-
-.backdrop picture,
-.backdrop img {
+.backdrop iframe {
+  align-self: center;
+  border: none;
   max-height: 100%;
-  width: unset;
-  aspect-ratio: unset;
+  max-width: 100%;
 }
 
-.backdrop figcaption {
-  padding: 0 var(--space-xxl);
-}
-
-.backdrop [data-close],
-.backdrop [data-previous],
-.backdrop [data-next] {
+.backdrop [data-close] {
   --theme-color: var(--color-secondary);
 
   position: absolute;
@@ -83,69 +50,20 @@
 .backdrop [data-close] {
   padding: var(--space-m) var(--space-l);
   right: 50%;
-  bottom: var(--space-xl);
+  top: var(--space-xl);
   transform: translateX(50%);
 }
 
-.backdrop [data-previous],
-.backdrop [data-next] {
-  justify-content: center;
-  border-radius: 9999px;
-  top: 50%;
-  height: 44px;
-  width: 44px;
-  transform: translateY(-50%);
-}
-
-.backdrop [data-previous] {
-  left: var(--space-xl);
-}
-
-.backdrop [data-next] {
-  right: var(--space-xl);
-}
-
-.backdrop button:disabled {
-  --theme-color: grey;
-}
-
-.backdrop .slider {
-  animation: grow var(--animation-duration) cubic-bezier(0.075, 0.82, 0.165, 1);
-  align-self: center;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  flex-wrap: nowrap;
-  height: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
-  scroll-behavior: var(--scroll-behavior, smooth);
-  scroll-snap-type: x mandatory;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-
-.backdrop .slider::-webkit-scrollbar {
-  display: none;
-}
-
 @media screen and (min-width: 768px) {
+  .backdrop iframe {
+    border-radius: var(--border-radius-m);
+    margin-top: var(--space-xl);
+  }
+
   .backdrop [data-close] {
     top: var(--space-xl);
-    right: var(--space-xl);
-    bottom: auto;
+    left: var(--space-xl);
+    right: unset;
     transform: unset;
-  }
-
-  .backdrop [data-previous] {
-    left: var(--space-xxl);
-  }
-
-  .backdrop [data-next] {
-    right: var(--space-xxl);
-  }
-
-  .backdrop .slider {
-    scroll-snap-type: x proximity;
   }
 }
