--- a/src/_collections/blog/index.njk
+++ b/src/_collections/blog/index.njk
@@ -4,6 +4,8 @@ pagination:
   size: 10
   generatePageOnEmptyData: true
   reverse: true
+
+permalink: /blog{%if pagination.pageNumber%}/page/{{ pagination.pageNumber + 1 }}{% endif %}/
 ---
 
 {% if pagination.items.length %}
@@ -31,6 +33,8 @@ pagination:
     {% endeach %}
 
   </div>
+
+  {% include 'page_links.njk' %}
 
 {% else %}
 
