--- a/src/_includes/styles/_index.css
+++ b/src/_includes/styles/_index.css
@@ -70,6 +70,9 @@ body {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   width: 100%;
 }
 
@@ -88,7 +91,7 @@ button {
 
 :focus {
   outline: var(--border-width) dashed var(--color, var(--color-primary));
-  outline-offset: var(--border-width);
+  outline-offset: var(--outline-offset, var(--border-width));
 }
 
 .container {
