--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -126,6 +126,10 @@ p {
   margin-bottom: var(--space-l);
 }
 
+a[aria-current='page'] {
+  --link-color: var(--color-text-muted);
+}
+
 [data-back] {
   padding-left: 1.5ch;
 }
